# EpubGraph

./: .gitignore  CHECKLIST.md  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: user-manual.html
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/calibre/: mod.rs
src-tauri/src/commands/: books.rs  export.rs  library.rs  mod.rs  ollama.rs  recommendations.rs  settings.rs  upnext.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src-tauri/src/epub/: mod.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/vector/: mod.rs
src-tauri/src/watcher/: mod.rs
src-tauri/src/worker/: mod.rs
src/lib/api/: commands.ts
src/lib/components/: BookCard.svelte  BookDetail.svelte  BookGrid.svelte  ContextMenu.svelte  EmptyState.svelte  GraphView.svelte  SearchBar.svelte  Sidebar.svelte  Toast.svelte
src/lib/components/bookshelf/: Library3D.svelte  index.ts
src/lib/components/bookshelf/three/: book.ts  bookshelf.ts  index.ts  interaction.ts  materials.ts  scene.ts  scroll.ts  shelf.ts
src/lib/components/bookshelf/types/: book.ts  config.ts
src/lib/stores/: library.ts  recentlyViewed.ts  theme.ts  upnext.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/graph/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/up-next/: +page.svelte
