[package]
name = "epub-graph"
version = "0.1.0"
description = "High-performance ebook library with AI-powered recommendations"
authors = ["Paolo"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[lib]
name = "epub_graph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "parking_lot"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - SQLite with FTS5 support
rusqlite = { version = "0.31", features = [
    "bundled",
    "backup", 
    "functions",
    "vtab",
    "modern_sqlite"
] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Filesystem operations
walkdir = "2"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
rayon = "1"
glob = "0.3"

# EPUB parsing
epub = "2"
quick-xml = { version = "0.31", features = ["serialize"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Graph data structure
petgraph = "0.6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.21"
parking_lot = "0.12"
dashmap = "5"
once_cell = "1"
futures = "0.3"
async-channel = "2"

# Image handling for covers
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

# Platform directories
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
